test/tests/bad/conflicting-var-def_0.carth
;; ConflictingVarDef

(def foo +)
(def foo -)
